practical/kompose/output/config-map-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.21.0 (992df58d8)
  labels:
    io.kompose.service: config-map-app
  name: config-map-app
spec:
  ports:
  - name: "8001"
    port: 8001
    targetPort: 8080
  selector:
    io.kompose.service: config-map-app
status:
  loadBalancer: {}
