practical/kompose/output/example-network-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: example-network
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/example-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/example-network: "true"
